...
  <!-- Strings relatedwalletount creation -->
  <string name="prompt_password">Password</string>
  <string name="action_sign_in_short">Create</string>

  <!-- String related to sending -->
  <string name="prompt_to">To</string>
  <string name="action_send">Send</string>

  <string name="error_field_required">This field is required</string>

  <string name="action_settings">Settings</string>
  <string name="title_account_list">Wallets</string>
  <string name="cancel">Cancel</string>
...
  <string name="unlock_screen_prompt_android">Please unlock your Android device to continue.</string>

  <string name="do_manage_make_backup">Did you successfully make a backup?</string>
  <string name="yes_continue">Yes, continue</string>
  <string name="yes_done_button">Yes, done</string>
  <string name="no_repeat">No, repeat</string>
  <string name="skip">Skip</string>
  <string name="skip_with_arrow">Skip &gt;</string>
  <string name="root_title">DEVICE SECURITY COMPROMISED</string>
  <string name="root_body">Any \'rooted\' app can access AppCoins Wallet\'s keychain data and steal your wallet! Wipe this wallet immediately and restore on a secure device.</string>
  <string name="credits_purchase_value">%s AppCoins Credits</string>
  <string name="buying">Buying %s</string>
  <string name="action_buy">Buy</string>
  <string name="empty"/>
  <string name="try_again">Try again</string>
  <string name="already_have_account">Already have a wallet?</string>
  <string name="action_create_new_account">Create new wallet</string>
  <string name="unknown_error">An error has occurred.</string>
  <string name="action_backup_wallet">Backup Wallet</string>
  <string name="no_tokens">You haven\'t added any custom token yet.</string>
  <string name="title_email">Email Us</string>
  <string name="action_donate">Donate</string>

...
  <string name="intro_4_body_2">All your transactions are always safe thanks to the latest technology.</string>
  <string name="intro_5_title">Get Free AppCoins Credits!</string>
  <string name="intro_5_body">You\'ll earn free AppCoins Credits by trying apps and games.</string>
  <string name="intro_creating_wallet_short">Setting up your wallet for you&#8230;</string>
  <string name="intro_wallet_created_short">Wallet created!</string>
  <string name="intro_agree_terms_and_conditions_body">By entering the AppCoins Wallet, you agree to the %1$s and %2$s.</string>
  <string name="intro_skip_button">SKIP</string>
  <string name="intro_welcome_header">Welcome to the AppCoins Wallet</string>
  <string name="intro_welcome_body">Top up your wallet or make a purchase in any AppCoins compatible app or game.</string>
  <string name="intro_welcome_header_2">Up to %s%% Bonus!</string>
  <string name="intro_welcome_body_2">Bonuses can be used in any app or game.</string>
  <string name="intro_already_have_wallet_button">I already have a wallet</string>
  <string name="intro_get_started_button">Launch wallet</string>
...
  <!-- Labels -->
  <string name="label_from">From</string>
  <string name="label_to">To</string>
  <string name="label_gas_limit">Gas Limit</string>
  <string name="label_gas_price">Gas Price</string>
  <string name="label_network_fee">Network Fee</string>
  <string name="button_ok">OK</string>
  <string name="hint_recipient_address">Recipient Address</string>
  <string name="hint_amount">Amount</string>
  <string name="hint_amount_with_token">Amount %s</string>
  <string name="hint_contract_address">Contract address</string>
  <string name="hint_contract_symbol">Symbol</string>
  <string name="hint_contract_decimals">Decimals</string>
...
  <string name="back_button">Back</string>
  <string name="value_fiat">%1$s%2$s</string>
  <string name="value_crypto">%1$s %2$s</string>
  <string name="dismiss_button">Dismiss</string>
  <string name="discover_button">Discover</string>
  <string name="retry_button">Retry</string>
  <string name="do_it_later_button">Do it later</string>
  <string name="connection_error_body">It seems your\'re not connected to the Internet. Check your connection and try again!</string>
  <string name="common_or">OR</string>
  <string name="share_via">Share via:</string>
  <string name="password">Password</string>
  <string name="repeat_password">Repeat password</string>
  <string name="turn_on_button">Turn on</string>
...
