...
      android:paddingStart="@dimen/big_padding"
      android:text="@string/title_dialog_add_account"
      android:textColor="@color/bottom_dialog_title"
      android:textSize="16sp"
      />
  <FrameLayout
      android:id="@+id/new_account_action"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="@drawable/bg_ripple_primary_color"
      >
    <ImageView
        android:layout_width="24dp"
...
        android:textColor="@color/bottom_dialog_item"
        android:textSize="16sp"
        />
  </FrameLayout>

  <FrameLayout
      android:id="@+id/import_account_action"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="@drawable/bg_ripple_primary_color"
      >
    <ImageView
        android:layout_width="24dp"
...
