...
      </androidx.coordinatorlayout.widget.CoordinatorLayout>

      <androidx.coordinatorlayout.widget.CoordinatorLayout
          android:id="@+id/promotions_list_title_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:background="@drawable/background_active_wallet"
          android:minHeight="28dp"
          android:paddingHorizontal="@dimen/big_margin"
          android:paddingTop="@dimen/big_margin"
          app:layout_collapseMode="none"
          >
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
      </androidx.coordinatorlayout.widget.CoordinatorLayout>

      <include
          android:id="@+id/toolbar"
          layout="@layout/fragment_promotions_toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:layout_collapseMode="pin"
          />
    </com.google.android.material.appbar.CollapsingToolbarLayout>
...
