<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/extended_fab_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
    app:layout_constraintEnd_toEndOf="parent"
    >
  <com.google.android.material.button.MaterialButton
      android:id="@+id/top_up_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="16dp"
      android:backgroundTint="@color/floating_btn_start_gradient_color"
      android:minHeight="48dp"
      android:onClick="onClick"
      app:cornerRadius="56dp"
      app:icon="@drawable/ic_add_white_24dp"
      app:iconGravity="textStart"
      app:iconTint="#ffffff"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/Widget.MaterialComponents.Button.Icon"
      />
</androidx.constraintlayout.widget.ConstraintLayout>
